--- a/src/index.scss
+++ b/src/index.scss
@@ -31,3 +31,33 @@ body {
   src: url("./common/fonts/ReemKufiFun-Regular.ttf");
   font-weight: 400;
 }
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("./common/fonts/NotoSansKR-Black.otf");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("./common/fonts/NotoSansKR-Bold.otf");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("./common/fonts/NotoSansKR-Medium.otf");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("./common/fonts/NotoSansKR-Regular.otf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "NotoSansKR";
+  src: url("./common/fonts/NotoSansKR-Thin.otf");
+  font-weight: 300;
+}
