--- a/src/common/components/GoogleMap.scss
+++ b/src/common/components/GoogleMap.scss
@@ -3,4 +3,11 @@
   left: 50%;
   top: 20px;
   display: flex;
+  transform: translateX(-50%);
+  &:focus{
+    border: none;
+  }
+  &:active{
+    border: none;
+  }
 }
