--- a/src/pages/room/RoomHeader.scss
+++ b/src/pages/room/RoomHeader.scss
@@ -1,6 +1,7 @@
-.room-header{
+.room-header {
   position: absolute;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   top: 0;
   z-index: 99;
@@ -8,21 +9,34 @@
   width: 100vw;
   height: 100px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  &-main{
+  &-main {
     display: flex;
     height: 70px;
-    div{
+    div {
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       width: 70px;
-      &:first-child{
+      border-radius: 5px;
+      &:first-child {
         // background-color: rgb(0, 255, 187);
       }
       background-color: white;
       // background-color: cornflowerblue;
-    
+    }
+  }
+  &-sub{
+    display: flex;
+    align-items: center;
+    &-item{
+      border-radius: 100%;
+      width: 50px;
+      height: 50px;
+      background-color: #ececec;
+      img{
+        width: 100%;
+      }
     }
   }
 }
