ADD : 가구 이동시 카메라 비활성화, 선택 가구 하이라이트, 가구창 숨기기, 가구 정보창

--- a/src/pages/room/FurnitureList.scss
+++ b/src/pages/room/FurnitureList.scss
@@ -4,4 +4,42 @@
   img{
     cursor: pointer;
   }
+  &-leftbutton{
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
+    img{
+      width: 15px;
+      height: 15px;
+    }
+    transition: .3s;
+    &:hover{
+      transform: translateX(-3px);
+    }
+  }
+  &-rightbutton{
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    margin-left: 10px;
+    width: 30px;
+    height: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
+    img{
+      width: 15px;
+      height: 15px;
+    }
+    transition: .3s;
+    &:hover{
+      transform: translateX(3px);
+    }
+  }
 }
