--- a/src/pages/room/Furniture.scss
+++ b/src/pages/room/Furniture.scss
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: .3s;
+  // &:hover{
+  //   transform: translateY(2px);
+  // }
   img{
     height: 70%;
   }
