--- a/src/pages/room/FurnitureSelector.scss
+++ b/src/pages/room/FurnitureSelector.scss
@@ -23,5 +23,42 @@
     img{
       width: 90%;
     }
+    &.selected{
+      border: 2px solid rgb(97, 97, 255);
+    }
+  }
+  &-hider{
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: -40px;
+    top: 10px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transition: .4s;
+    &:hover{
+      transform: translateY(5px);
+    }
+  }
+  &-show{
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    bottom: 10px;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    
   }
 }
