--- a/src/pages/room/FurnitureInfo.scss
+++ b/src/pages/room/FurnitureInfo.scss
@@ -1,4 +1,4 @@
-.furnitureinfo{
+.furnitureinfo {
   position: absolute;
   z-index: 10;
   top: 110px;
@@ -7,38 +7,58 @@
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
   border-radius: 7px;
-  &-graphic{
-  display: flex;
-
+  &-exit {
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 5px;
+    left: -35px;
+    width: 30px;
+    height: 30px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
+    border-radius: 100%;
+    background-color: white;
     img{
+      width: 17px;
+    }
+    transition: .3s;
+    &:hover{
+      transform: translateX(-3px);
+    }
+  }
+  &-graphic {
+    display: flex;
+
+    img {
       width: 100px;
       height: 100px;
       border-radius: 5px;
       margin-right: 5px;
     }
   }
-  &-size{
+  &-size {
     margin: 10px;
     color: black;
     font-weight: 300;
     font-size: 14px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
-  &-add{
+  &-add {
     cursor: pointer;
+    margin-top: 10px;
     height: 50px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
-  background-color: 	#4B89DC;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
+    background-color: #4b89dc;
     color: white;
     border-radius: 5px;
     padding: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .3s;
-    &:hover{
-      background-color: #447ac1;
-    }
+    
   }
 }
