--- a/src/pages/room/RoomSideBar.scss
+++ b/src/pages/room/RoomSideBar.scss
@@ -1,20 +1,28 @@
 .sidebar {
   background-color: white;
   padding: 5px;
-  border-radius: 10px;
+  border-radius: 25px;
   position: absolute;
   top: 30%;
   left: 5%;
   z-index: 99;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 2px;
   &-item {
-    margin: 2px 0;
+    cursor: pointer;
+    margin: 10px 1px;
     padding: 15px;
-    border-radius: 10px;
-    border: 1px solid white;
-    &.selected{
-      border: 1px solid #ececec;
-      background-color: white;
+    border-radius: 100%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
+    transition: .2s;
+    &.translate{
+      &:hover{
+        transform: translateY(2px);
+      }
+    }
+    &.rotate{
+      &:hover{
+        transform: translateY(2px);
+      }
     }
   }
 }
