--- a/src/common/components/GoogleMap.scss
+++ b/src/common/components/GoogleMap.scss
@@ -4,6 +4,11 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
+  // &-pts{
+  //   input{
+  //     backgr
+  //   }
+  // }  
   &-user {
     width: 80%;
     display: flex;
@@ -24,6 +29,34 @@
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 2px 4px;
     margin-right: 3vw;
+    &-pts {
+      position: relative;
+      input {
+        display: none;
+      }
+      &-label {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: -20px;
+        width: 41px;
+        height: 41px;
+        border-radius: 100%;
+        background-color: white;
+        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+        transition: 0.2s;
+        img{
+          width: 28px;
+          position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        }
+        &:active {
+          transform: scale(0.9);
+        }
+      }
+    }
     &-photo {
       position: relative;
       input {
@@ -33,7 +66,7 @@
         display: block;
         position: absolute;
         bottom: 0;
-        right: -9px;
+        right: 25px;
         width: 41px;
         height: 41px;
         border-radius: 100%;
