--- a/src/pages/room/RoomHeader.scss
+++ b/src/pages/room/RoomHeader.scss
@@ -10,8 +10,16 @@
   height: 100px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   &-main {
+    cursor: pointer;
     display: flex;
-    height: 70px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin-left: 10px;
+    background-color: #4b89dc;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 4px 8px;
+    border-radius: 5px;
+    padding: 20px;
     div {
       cursor: pointer;
       display: flex;
@@ -26,11 +34,11 @@
       // background-color: cornflowerblue;
     }
   }
-  &-sub{
+  &-sub {
     display: flex;
     align-items: center;
     margin-right: 30px;
-    &-item{
+    &-item {
       cursor: pointer;
       display: flex;
       flex-direction: column;
@@ -40,10 +48,10 @@
       width: 55px;
       height: 55px;
       // background-color: #ececec;
-      img{
+      img {
         width: 70%;
       }
-      div{
+      div {
         text-align: center;
         font-size: 9px;
       }
