--- a/src/pages/room/RoomHeader.scss
+++ b/src/pages/room/RoomHeader.scss
@@ -48,10 +48,12 @@
       width: 55px;
       height: 55px;
       // background-color: #ececec;
+      margin: 10px;
       img {
         width: 70%;
       }
       div {
+        width: 100px;
         text-align: center;
         font-size: 9px;
       }
